Fix Layout flickering on page load (#583)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import 'icons';
 @import 'common';
 @import '../assets/fonts/roboto.css';
+@import '../assets/fonts/system.css';
 
 html {
   -webkit-font-smoothing: antialiased;
@@ -20,7 +21,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: "Roboto", "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", "Android Emoji", "Emoji One", "Twemoji", sans-serif;
+  font-family: "Roboto", "system", "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", "Android Emoji", "Emoji One", "Twemoji", sans-serif;
   color: var(--color-text);
   overflow: hidden;
 }
